--- a/Javascript/quiz-app/index.html
+++ b/Javascript/quiz-app/index.html
@@ -33,13 +33,8 @@
             <h1 class="text-2xl font-bold py-2">Simple quiz</h1>
             <div class="quiz">
                 <h2 id="question" class="text-xl py-2"></h2>
-                <div id="answer_btn" class="grid gap-5">
-                    <button class="btn border p-2 hover:bg-slate-200">answer 1</button>
-                    <button class="btn border p-2 hover:bg-slate-200">answer 2</button>
-                    <button class="btn border p-2 hover:bg-slate-200">answer 3</button>
-                    <button class="btn border p-2 hover:bg-slate-200">answer 4</button>
-                </div>
-                <button id="next_btn" class="border py-2 px-5 mt-5 bg-green-500 font-bold rounded text-white">Next</button>
+                <div id="answer_btn" class="grid gap-5"></div>
+                <button id="next_btn" class="border py-2 px-5 mt-5 bg-green-500 font-bold rounded text-white"></button>
             </div>
         </div>
     </div>
