--- a/Javascript/quiz-app/index.html
+++ b/Javascript/quiz-app/index.html
@@ -40,7 +40,13 @@
     </div>
 
 
-
+    <div class="m-5">
+        <div class="flex">
+            <input type="text" class="input border p-2">
+            <button class="button border p-2 bg-slate-200">click</button>
+        </div>
+        <p class="demo m-5"></p>
+    </div>
 
     <script src="./script.js"></script>
 </body>
